--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     <!-- footer -->
     <footer class="footer container">
       <a href="#" class="footer__logo">
-        <img src="/images/logo.svg" alt="Blogr" />
+        <img src="images/logo.svg" alt="Blogr" />
       </a>
       <div class="footer__links col1">
         <a class="link-head" href="#">Product</a>
